--- a/css/style.css
+++ b/css/style.css
@@ -823,7 +823,7 @@ footer a {
     display: flex;
     justify-content: center;
     margin-top: 5rem;
-    margin-bottom: 8rem;
+    margin-bottom: 2rem;
 }
 
 
@@ -867,7 +867,7 @@ footer a {
 
 .thankyoubtn{
     margin: 2rem 0 1rem 0;
-    width: 20%;
+    width: 8rem;
     background-color: rgba(255, 255, 255, 0.671);
 }
 
