--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,12 @@ body{
     background-position: center;
 }
 
+.imageApp3{
+    background-image: url(../img/portfolio/coin.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
 .imagegrafic1{
     background-image: url(../img/portfolio/fantasy.jpg);
     background-size: cover;
@@ -418,7 +424,7 @@ text-shadow: 1px 1px 2px black;
     flex-direction: column;
     justify-content:space-evenly;
     align-items: center;
-}
+} 
 
 .rowCard h3{
     font-size: 4rem;
@@ -916,3 +922,45 @@ justify-content: center;
 #close .fas{
     margin-right: .3rem;
 } 
+
+
+
+/*-------------------------------------------------------Blog Főoldal----------------------------------------------------------------------------------*/
+
+
+/*-----------csempe---------------------------------------------------------------------------*/
+#tiles{
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+    background-color: rgba(0, 255, 255, 0.082);
+    width: 80%;
+    margin: 2rem auto 2rem auto;
+    padding: 1rem;
+}
+
+#tiles span{
+    width: 15rem;
+    height: 8rem;
+    background-color: coral;
+    text-align: center;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.2rem;
+}
+#tiles a{
+    text-decoration: none;
+    color: white;
+}
+
+#tiles span:hover{
+        outline: 2px solid whitesmoke;
+        cursor: pointer;
+}
+
+/*------------------------Cikek---------------------------------------------------------------*/
+
