--- a/css/phone.css
+++ b/css/phone.css
@@ -140,3 +140,9 @@ font-size: .8rem;
 }
 
 
+/*-----------------------Fantasy gallery------------------------------------------------- */
+
+.grid-wrap {
+    margin-left: 10px;
+    margin-right: 10px ;
+  }
