--- a/css/galleryStyle.css
+++ b/css/galleryStyle.css
@@ -5,3 +5,140 @@
 .item:hover{
     filter: brightness(60%) ;
 }
+
+
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: ghostwhite;
+  }
+  
+  h1 {
+    text-align: center;
+    font-size: 4em;
+    font-family: monospace;
+  }
+  
+  ul,
+  li {
+    list-style: none;
+    padding: 0;
+    margin: 10px;
+  }
+  
+  
+  .grid-wrap {
+    position: relative;
+    margin: 0;
+    padding: 10px;
+    margin-left: 50px;
+    margin-right: 50px ;
+  }
+  .grid-wrap ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, auto));
+    grid-auto-flow: dense;
+    grid-gap: 1px;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .grid-wrap ul li {
+    position: relative;
+  
+  }
+  
+  .grid-wrap ul li:nth-child(1) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(2) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(3) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(4) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(5) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(6) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(7) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(8) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(9) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(10) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(11) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(12) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(13) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(14) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(15) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(16) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(17) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(18) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  .grid-wrap ul li:nth-child(19) {
+    grid-row: span 2;
+    grid-column: span 4;
+  }
+  
+  
+  .grid-wrap ul img {
+      width: 100%;
+      height:100%;
+      object-fit:contain;
+  
+  }
+  .grid-wrap ul li:hover{
+      filter: opacity(0.8);
+      transition: .2s;
+      cursor: pointer;
+  }
