--- a/css/phone.css
+++ b/css/phone.css
@@ -1,3 +1,6 @@
+*{
+    padding: 0;
+}
 /*---------------------------------------------------------Home_page--------------------------------------------------------------------------------------*/
 
 /* Home */
@@ -13,9 +16,23 @@
 #intro h2{
     font-size: 1.5rem;
 }
+#avatar{
+width: 18rem;
+height: auto;
+margin: 0 1rem 0 1rem;
+}
 
-
-
+#intro {
+    padding: 0;
+    font-size: 1rem;
+}
+#intro p {
+    font-size: 1.3rem;
+    padding: 0;
+    width: 100%;
+    text-align: start;
+    margin: 0;
+}
 
 /*Portfolió Gallery*/
 
@@ -24,8 +41,8 @@
 }
 
 .image{
-        width: 24rem;
-        height: 14rem;
+    width: 19rem;
+    height: 10rem;
 }
 
 .info{
@@ -36,7 +53,27 @@
 
 
 
-/* Contact */
+
+/*---------Service------------------------*/
+
+
+.rowCard {
+    width: 28rem;
+    height: auto;
+    padding-top: .4rem;
+    margin: 3.5rem 2rem 0 2rem;
+   
+}
+
+/*---------------------Contact-----------------------*/
+
+.form{
+    width: 100%;
+}
+#contact{
+    padding: 0 .5rem 0 1rem;
+}
+
 .input{
     width: 80%;   
 }
@@ -139,6 +176,15 @@ font-size: .8rem;
     padding: 1rem;
 }
 
+/*------------------Thankyou Page---------------------------------------------------------*/
+
+#thimg{
+    display: none;
+}
+
+.text{
+    margin-top: -4rem;
+}
 
 /*-----------------------Fantasy gallery------------------------------------------------- */
 
@@ -146,3 +192,18 @@ font-size: .8rem;
     margin-left: 10px;
     margin-right: 10px ;
   }
+
+h3{
+    text-align: center;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+  .pageTitle {
+    width: 100%;
+    text-align: start;
+    margin: 1rem 0 2rem 1rem;
+}
+
+.thankyou .text {
+    padding: 0rem;
+}
